[tool.poetry]
name = "wanda"
version = "0.63.0"
description = "Set wallpapers with keywords or randomly"
authors = ["kshib <ksyko@pm.me>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ksh-b/wanda"
repository = "https://github.com/ksh-b/wanda"
keywords=["wallpaper", "reddit", "wallhaven","unsplash","termux"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/ksh-b/wanda/issues"

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^5.0.0"
cloudscraper = "^1.2.60"
Pillow = "^9.1.0"
screeninfo = "^0.8"
colorthief = "^0.2.1"
filetype = "^1.0.13"
musicbrainzngs = "^0.7.1"
appdirs = "^1.4.4"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
ruff = "^0.2.1"
mypy = "^1.5.1"
pytest-xdist = "^3.1.0"
pytest-cov = "^4.0.0"
pytest-rerunfailures = "^13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
wanda = "wanda.wanda:run"
