[project]
name = "wanda"
version = "1.0.1"
description = "Set wallpapers with keywords or randomly"
authors = [{ name = "kshib", email = "ksyko@pm.me" }]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ksh-b/wanda"
repository = "https://github.com/ksh-b/wanda"
keywords = ["wallpaper", "reddit", "wallhaven", "earthview", "termux"]
requires-python = ">=3.8,<4.0.0"
dependencies = [
    "lxml (>=5.2.2,<6.0.0)",
    "cloudscraper (>=1.2.71,<2.0.0)",
    "Pillow (>=10.3.0,<11.0.0)",
    "screeninfo (>=0.8.1,<1.0.0)",
    "colorthief (>=0.2.1,<1.0.0)",
    "filetype (>=1.2.0,<2.0.0)",
    "musicbrainzngs (>=0.7.1,<1.0.0)",
    "appdirs (>=1.4.4,<2.0.0)"
]

[project.urls]
"Bug Tracker" = "https://github.com/ksh-b/wanda/issues"

[poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.9.6"
mypy = "^1.14.1"
pytest-xdist = "^3.6.1"
pytest-cov = "^5.0.0"
pytest-rerunfailures = "^14.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
wanda = "wanda.wanda:run"
